Fixes scrollbar issue when sidenav expanded.

--- a/static/less/ach-debits.less
+++ b/static/less/ach-debits.less
@@ -1,4 +1,4 @@
-body.ach-debits, body.pricing {
+body.ach-debits, body.pricing , body.open-company {
     position: relative;
     background: none;
 
